# robotic_pulling

./: .gitignore
matlab/: AtoBExample.m  CoPBoundaryExample.m  counterExampleMaxPressureInequality.m  exampleCoPBoundary.m  exampleForceHull.m  exampleMagneticDipoles.m  exampleMomentHull.m  examplePeshkinsBoundCompare.m  exampleRotationCenterExtrema.m  exampleRotationCenterPlot.m  limitSurfaceExample.m  rotationCenterExample.m  silverWatchExample.m  variablePressureExample.m
matlab/+data/: batchComputePodBounds.m  generateMITBounds.m  generatePodsDataSet.m  getDataPath.m  loadMITObjects.m  loadMITPushingDataSet.m  mkdire.m  randPod.m  randPoly.m  randomPod.m  rectangle.m
matlab/+ddp/: CSC.m  arcLength.m  autoF.m  autoH.m  autoL.m  autoLf.m  autogen.m  calcF.m  calcH.m  calcL.m  calcLf.m  computeRearAxle.m  dft.m  dubinsCar.m  idft.m  planCSC.m  playback.m  sym2exp.m  symF.m  symH.m  symIDFT.m  symL.m  symLf.m
matlab/+presspull/: G.m  anglePointRay.m  calcFx.m  calcFy.m  calcG.m  calcG2.m  calcRectangleCorners.m  calcRectangleWorldCoord.m  ccm.m  computeAngularVelocityBounds.m  computeBounds.m  computeCoMPolygon.m  computeConvergenceTime.m  computeConvexInteriorInequality2D.m  computeFrictionalForce.m  computeFrictionalMoment.m  computeLimitSurfaceCOM.m  computeOmega.m  computeRotationCenter.m  computeRotationCenterExtrema.m  convergeEvent.m  fillScanLines2D.m  fillScanLines2DGrid.m  fillScanLines2DGrid2.m  generate2DTetrapod.m  generateCoMPressures.m  getSpacedContactPoints.m  inConvexHull.m  intersectLineCircle.m  intersectLineLine.m  intersectPlaneConvexHull.m  nextPermutation.m  plotRectangle.m  plotTriangle.m  pointInConvexHull.m  pointInConvexHull2.m  pointInConvexHull2D.m  pointInConvexHull3.m  pointInConvexHullG.m  pointInConvexHullG2.m  (+1 more)
matlab/+utils/: checkDependencies.m  getAllFiles.m  ros_setup.m
matlab/experiments/ros_interface/ros_packages/robot_comm/: CMakeLists.txt  package.xml
matlab/experiments/ros_interface/ros_packages/robot_comm/include/robot_comm/: robot_comm.h
matlab/experiments/ros_interface/ros_packages/robot_comm/src/: robot_comm.cpp
matlab/experiments/ros_interface/ros_packages/robot_comm/srv/: robot_AddTrajectoryPoint.srv  robot_ClearTrajectory.srv  robot_ExecuteTrajectory.srv  robot_GetState.srv
tex/: RSS2017_CameraReady.tex  RSS2017_ContactWorkshop.tex  RSS2017_Poster.tex  RSS2017_PressPull.tex  RSS2017_PressPull_slides.tex  RSS2017_Workshop.tex  references.bib
(+172 files in other folders)
